# EpidemicsSimulator

./: ANN_Project_draft.md  RL_experiment.ipynb  debug.py  dynamics.py  dynamics_epidemics.ipynb  epidemic_env.py  eval_experiments.ipynb  evaluation.ipynb  main.py  model_experiments.ipynb  pyproject.toml  readme.md  solution.ipynb  train_all.py  tutorial.ipynb
config/: single_city.yaml  switzerland.yaml
deep_q_learning/: __init__.py  agent.py  country_wide.py  distributed.py  model.py  preprocessors.py  trainer.py
docs/deep_q_learning/: agent.html  country_wide.html  distributed.html  index.html  model.html  trainer.html
docs/epidemic_env/: env.html  (+4 more)
epidemic_env/: distributed.py  dynamics.py  env.py  visualize.py
models/: country_wide_binary_agent11_10.07_38_25.pkl  country_wide_binary_agent11_10.10_46_14.pkl  country_wide_binary_toggle_agent11_10.07_38_25.pkl  country_wide_binary_toggle_agent11_10.10_46_14.pkl  country_wide_multiaction_agent11_10.07_38_25.pkl  country_wide_multiaction_agent11_10.10_46_14.pkl  decentralized_binary_agents11_10.07_38_25.pkl  decentralized_binary_agents11_10.10_46_14.pkl  decentralized_binary_toggled_agents11_10.07_38_25.pkl  decentralized_binary_toggled_agents11_10.10_46_14.pkl  decentralized_multiaction_agent11_10.10_46_14.pkl  deep_q_learning.pkl  deep_q_learning_dec_epsilon.pkl  deep_q_learning_factor.pkl  deep_q_learning_factor_low_gamma.pkl  deep_q_learning_toggle.pkl
results/: deep_q_learning.pkl  deep_q_learning_dec_epsilon.pkl  deep_q_learning_factor.pkl  deep_q_learning_factor_low_gamma.pkl  deep_q_learning_toggle.pkl
(+14 files in other folders)
