[project]
name = "epidemic_env"
description = "Environment for the Epidemic Mitigation Project"
version = "1.0.0"
authors = [
    { name = "Titouan Renard", email = "titouan.renard@epfl.ch" }
]
dependencies = [
    "torch",
    "numpy",
    "networkx",
    "matplotlib",
    "gym",
    "pyyaml",
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters